--- a/css/style.css
+++ b/css/style.css
@@ -1,310 +1,58 @@
-/* переменные - удалить при подключении отдельного файла с переменными */
+/* переменные */
 :root {
-  --white-text: rgba(255, 255, 255, 1);
+  --text-blue: #2196f3;
+  --text-black: #212121;
+  --text-grey: #757575;
+  --text-grey-op60: rgba(255, 255, 255, 0.6);
+  --text-white: #ffffff;
 
-  --grey-text: rgba(157, 164, 189, 1);
-  --grey-text-op60: rgba(157, 164, 189, 0.6);
-  --grey-text-op40: rgba(157, 164, 189, 0.4);
-
-  --graphite: rgba(48, 48, 48, 1);
-  --graphite-light: rgba(85, 85, 85, 1);
-
-  --orange: rgba(255, 108, 0, 1);
-
-  --back-light-grey: rgba(247, 247, 247, 1);
+  --back-white: #e5e5e5;
+  --back-black-light: #2f303a;
+  --back-grey: #f5f4fa;
 }
 
-font-family: 'Raleway', sans-serif;
-font-family: 'Roboto', sans-serif;
-
-
-
-/* применяем основное семейство шрифтов для всего документа и ссылок */
+/* основной шрифт для всего документа и ссылок */
 body,
 a {
-  font-family: 'Open Sans', sans-serif;
-}
-
-/* общие стили для всех предзаголовков */
-.pretitle {
-  font-weight: 600;
-  font-size: 11px;
-  line-height: 15px;
-
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
+  font-family: 'Roboto', sans-serif;
+  background-color: var(--back-white);
+  color: var(--text-black);
 }
 
 /* переназначаем шрифт для заголовков секций через общий класс */
-.title {
+.logo,
+.footer-logo {
   font-family: 'Raleway', sans-serif;
 }
 
-/* общие стили для всех предзаголовков */
-.short-desc {
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 1.67;
+/*===========================================================*/
 
-  letter-spacing: 0.02em;
+.logo-text,
+.nav-link:hover,
+.link:hover,
+.nav-link:focus,
+.link:focus {
+  color: var(--text-blue);
 }
 
-.online-sign {
-  border: 1px solid #ff6c00;
-  border-radius: 25px;
-
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 1.33;
-  letter-spacing: 0.09em;
-  text-transform: uppercase;
-
-  background: transparent;
-  color: var(--white-text);
+.link {
+  color: var(--text-grey);
 }
 
-.online-sign:hover,
-.online-sign:focus {
-  background-color: var(--orange);
-  color: var(--white-text);
+.hero-title,
+.hero-btn,
+.footer,
+.footer-logo {
+  color: var(--text-white);
 }
 
-/* === HEADER === */
-.header {
-  /* временный бэкграунд */
-  background-color: black;
-  color: white;
+.hero,
+.footer,
+.footer-logo,
+.footer-link {
+  background-color: var(--back-black-light);
 }
 
-.header a {
-  /* варианты применения белого цвета ссылкам */
-  /* color: white; */
-
-  /* наследование цвета ссылками от хэдэра */
-  /* color: inherit; */
-  /* color: currentColor; */
-
-  /* назначение цвета через переменную */
-  color: var(--white-text);
-}
-
-/* назначение цвета при наведении на ссылку */
-.nav-link:hover {
-  color: var(--orange);
-}
-
-/* === HERO === */
-.hero {
-  /* временный бэкграунд */
-  background: black;
-}
-
-.hero-pretitle {
-  color: var(--grey-text-op60);
-}
-
-.hero-title {
-  font-size: 72px;
-  line-height: 1.181;
-
-  letter-spacing: 0.05em;
-
-  color: var(--white-text);
-}
-
-.hero-desc {
-  color: var(--grey-text);
-}
-
-.hero-btn {
-  border: none;
-  background: transparent;
-
-  font-weight: 600;
-  font-size: 11px;
-  line-height: 1.36;
-
-  letter-spacing: 0.1em;
-
-  color: var(--grey-text-op60);
-}
-
-.hero-btn:hover,
-.hero-btn:focus,
-.hero-btn:active {
-  color: var(--white-text);
-}
-
-/* === ABOUT === */
-.about a,
-.about-pretitle,
-.about-title {
-  color: var(--graphite);
-}
-
-.about-desc {
-  color: var(--graphite-light);
-}
-
-/* === SERVICES === */
-.services {
-  background-color: black;
-}
-
-.services a {
-  color: var(--white-text);
-}
-
-.services-pretitle {
-  color: var(--grey-text-op60);
-}
-
-.services-title {
-  color: var(--white-text);
-}
-
-/* .table:first-of-type {
-  background: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
-} */
-
-/* .table:last-of-type {
-  background: linear-gradient(180deg, #090b13 0%, rgba(9, 11, 19, 0.2) 100%);
-} */
-
-.table td {
-  color: var(--grey-text);
-}
-
-/* === OLDSCHOOL === */
-.oldschool-pretitle,
-.showlist-num,
-.showlist-text {
-  color: var(--graphite);
-}
-
-.oldschool-desc {
-  color: var(--graphite-light);
-}
-
-.showlist li {
-  background: var(--back-light-grey);
-}
-
-.showlist-num {
-  font-weight: bold;
-  font-size: 42px;
-  line-height: 1.36;
-  text-align: center;
-
-  letter-spacing: 0.05em;
-}
-
-.showlist-text {
-  font-weight: 600;
-  font-size: 11px;
-  line-height: 1.36;
-  text-align: center;
-}
-
-/* === MASTERS === */
-.masters {
-  background: var(--back-light-grey);
-}
-
-.masters-pretitle,
-.masters-title {
-  color: var(--graphite);
-}
-
-.master-name {
-  font-size: 18px;
-  line-height: 1.39;
-
-  text-align: center;
-  letter-spacing: 0.02em;
-
-  color: var(--graphite);
-}
-
-.master-position {
-  font-size: 14px;
-  line-height: 1.36;
-
-  text-align: center;
-  letter-spacing: 0.02em;
-
-  color: var(--orange);
-}
-
-/* === BARBA === */
-.barba-pretitle {
-  color: var(--graphite);
-}
-
-/* === CONTACTS === */
-.contacts {
-  background: rgba(25, 28, 38, 1);
-}
-
-.contacts-title {
-  color: var(--white-text);
-}
-
-.signform input::placeholder,
-.signform textarea::placeholder {
-  color: var(--grey-text-op40);
-  text-transform: uppercase;
-  font-weight: 600;
-  font-size: 11px;
-  line-height: 1.36;
-
-  letter-spacing: 0.1em;
-}
-
-.signform input,
-.signform textarea {
-  color: var(--grey-text-op40);
-  background: transparent;
-  border: none;
-  border-bottom: 1px solid var(--grey-text-op40);
-}
-
-.signform input:active,
-.signform textarea:active {
-  color: var(--white-text);
-}
-
-.contacts a,
-.worktime {
-  font-size: 18px;
-  line-height: 1.67;
-
-  letter-spacing: 0.02em;
-
-  color: var(--grey-text);
-}
-
-.worktime-title {
-  color: var(--white-text);
-  font-weight: 600;
-  font-size: 11px;
-  line-height: 1.36;
-
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
-}
-
-/* === FOOTER === */
-.footer p,
-.footer a {
-  color: var(--grey-text);
-  font-weight: 600;
-  font-size: 11px;
-  line-height: 1.36;
-
-  letter-spacing: 0.2em;
-}
-
-.footer a {
-  color: var(--graphite);
+.footer-link {
+  color: var(--text-grey-op60);
 }
